# vijil-cc

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
src/client/: README.md  main.py  pyproject.toml  tinyalowda.py
src/server/: README.md  nohup.out  pyproject.toml
src/server/api/: main.py
