[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Paul Wong <paul@jaiken.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
tabulate = "^0.9.0"
requests = "^2.32.3"
arrow = "^1.3.0"
statistics = "^1.0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
